--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="./img/cofi.css">
+    <link rel="stylesheet" href="./img/im.css">
     <link rel="stylesheet" href="./css/configuracion.css">
     <link rel="stylesheet" href="./css/index.css">
 
@@ -17,7 +17,26 @@
        <div class="jeje">
          <img src="https://www.gifsanimados.org/data/media/373/corazon-imagen-animada-0260.gif" alt="">
        </div>
-       <span>Holiiiiiiiiiiiiii</span>
+       <span>Mil gracias por todo madre, espero algun dia poder hacerte tan feliz como lo haces tu conmigo</span>
+       
+       <p>Querida madresita jaja, ante todo quiero deciarte un</p>
+
+       <h2>¡Feliz día del cariño!</h2>
+       
+      <div>
+        <p>
+          Espero te guste esta humilde tarjetita para que recuerdes esos momentos en los que me decias que,
+          con detalles y todos se llega al amor y el aprecio, pero contigo solo puedo agradecerte todo lo que has hecho por Mi
+          en mi vida y aunque no has tenido mucha suerte que digamos, siempre me has apoyado ami de primero. Espero y se que si
+          algun día cumplire mi meta de devolverte aun mejor todo lo que me has dado. 
+
+          Te quiero mucho
+        </p>
+
+        <footer>Att: Tu hijo querido xd</footer>
+
+      </div>
+
    </div>
 
 
